Chapter style to match colors.

--- a/main.tex
+++ b/main.tex
@@ -25,7 +25,7 @@
 \usepackage{cleveref}
 \newcommand\pcref[1]{(\cref{#1})}
 
-%\usepackage[Glenn]{fncychap}
+\usepackage[Bjornstrup]{fncychap}
 \usepackage{tikz}
 \usepackage{titling}
 \usepackage[most]{tcolorbox}
