--- a/references.bib
+++ b/references.bib
@@ -248,3 +248,12 @@ keywords = {Relational database, Database design, Normalisation, Join dependenci
  year={2014},
  pages={1–23}
 }
+
+@inproceedings{Takens1980,
+  title={Detecting strange attractors in turbulence},
+  author={Takens, Floris},
+  booktitle={Dynamical Systems and Turbulence, Warwick 1980: proceedings of a symposium held at the University of Warwick 1979/80},
+  pages={366--381},
+  year={2006},
+  organization={Springer}
+}
