Reducing usage of future tense.

--- a/about.tex
+++ b/about.tex
@@ -9,7 +9,7 @@
 
 \begin{parwithqr}{https://www.buymeacoffee.com/verri}
   If you like this book, consider \emph{buying me a coffee} at
-  \href{\aurl}{buymeacoffee.com/verri}.   All donations will be used to improve this book,
+  \href{\aurl}{buymeacoffee.com/verri}.   All donations are used to improve this book,
   including editing and proofreading.
 \end{parwithqr}
 
@@ -36,12 +36,12 @@ Also, it is important to highlight that:
 \begin{itemize}
   \item This is not a Machine Learning book, and I do not intend to explain how specific
     ML algorithms work.
-  \item This contains some kind of introductory material on data science.  Although I will
+  \item This contains some kind of introductory material on data science.  Although I
     introduce the fundamental concepts, I expect you have strong mathematical and
     statistics background.
   \item An artificial constraint I have imposed in the material (for the sake of the
-    course) is that I will only consider \emph{predictive methods}, more specifically
-    inductive ones. I will not address topics such as clustering, association-rules
+    course) is that I only consider \emph{predictive methods}, more specifically
+    inductive ones. I not address topics such as clustering, association-rules
     mining, transductive learning, anomaly detection, time series forecasting, reinforced
     learning, etc.
 \end{itemize}
@@ -68,7 +68,7 @@ So\dots, I expect my approach on the subject provide:
     (pre-deployment) of machine learning models.
 \end{itemize}
 
-This book will cover the following material:
+This book covers the following material:
 \begin{itemize}
   \item Brief history of data science.
   \item Background topics.
